# Hacker-Newz

./: .gitignore  README.md  build.sh  manage.py  pyproject.toml  requirements.txt
newZ/: asgi.py  settings.py  urls.py  wsgi.py
newz/: admin.py  apps.py  helper_funcs.py  models.py  urls.py  views.py
newz/static/css/: base.css  filter_bar.css  navbar.css  news_summary.css  paginator.css  post.css
newz/static/js/: filter.js
newz/templates/: base.html  index.html  post_page.html
newz/templates/blocks/: comments.html  filter_bar.html  full news.html  navbar.html  news_summary.html  paginator.html
newzAPI/: apps.py  serializers.py  urls.py  views.py
scheduler/: newsAPI.py  updater.py
